make sure the floats don't overlap on the next character

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a img {
 .character {
     padding : 20px;
     margin-top : 10px;
+    clear : both;
 }
 
 .character h1, #char_select {
